[metadata]
name = iniconfig
description = brain-dead simple config-ini parsing
long_description = file: README.txt
long_description_content_type = text/plain
author = Ronny Pfannschmidt, Holger Krekel
author_email = pensource@ronnypfannschmidt.de, holger.krekel@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Utilities
requires_python = >=3.5
