[metadata]
name = iniconfig
description = brain-dead simple config-ini parsing
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/RonnyPfannschmidt/iniconfig
author = Ronny Pfannschmidt, Holger Krekel
author_email = pensource@ronnypfannschmidt.de, holger.krekel@gmail.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = iniconfig
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False
